--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
