--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL="https://n1track-node-production.up.railway.app/"
+VITE_API_URLs="https://n1track-node-production.up.railway.app/"
+VITE_API_URL="http://localhost:3333/"
